# MultiThread-FileTransferr

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.MD
lib/: CMakeLists.txt
lib/inc/: app.h  config.h  connection.h  fileblock.h  task.h  worker.h
lib/src/: app.cpp  config.cpp  connection.cpp  fileblock.cpp  task.cpp  worker.cpp
log/: CMakeLists.txt  log.cpp
log/inc/: log.h
test/: CMakeLists.txt  app.cpp  console.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
ui/: CMakeLists.txt  main.cpp  window.cpp  window.h  window.ui
